[package]
name = "remote-control"
version = "0.1.0"
authors = ["Victor Almeida <vct.a.almeida@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
local_ipaddress = "0.1.3"
mime_guess = "2.0.3"
rust-embed = "5.5.1"
tokio = { version = "1.13", features = ["macros"] }
warp = "0.2"
